tests/miniJava/neg/000351_mutation.MiniJava
class java { public static void Main ( String else ] java ) { { } } }
